# pysec-clients

./: .example.env  .pre-commit-config.yaml  AGENTS.md  README.md  conftest.py  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
.github/instructions/: mde-client-tests.instructions.md  mde-client.instructions.md  python-workflow.instructions.md
.github/workflows/: mde-schema-refresh.yml
docs/: index.md
docs/mde_client/: index.md
docs/mde_client/explanation/: dependency-injection.md  export-backed-endpoints.md  index.md  lazy-results.md  query-models.md
docs/mde_client/how-to/: authenticate-with-client-credentials.md  get-machine-related-data.md  index.md  inject-http-client-and-token-cache.md  list-and-filter-machines.md  run-advanced-hunting.md  use-export-backed-endpoints.md  work-with-result-formats.md
docs/mde_client/reference/: authentication.md  index.md  mde-client.md  queries.md  results.md  via-files.md
docs/mde_client/reference/endpoints/: advanced-queries.md  alerts.md  authenticated-agents.md  authenticated-definitions.md  baseline-configurations.md  browser-extension.md  certificate-inventory.md  device-av-health.md  domain.md  files.md  index.md  indicators.md  investigations.md  ips.md  library.md  machine-actions.md  machines.md  recommendations.md  remediations.md  score.md  software.md  user.md  vulnerabilities.md
docs/mde_client/tutorials/: get-started.md
scripts/: mde_contract.py
src/mde_client/: README.md  __init__.py  auth.py  client.py  main.py  pyproject.toml  viaFiles.py
src/mde_client/endpoints/: __init__.py  advancedqueries.py  alerts.py  authenticatedScan.py  base.py  browserExtension.py  certificateInventory.py  deviceAvHealth.py  domain.py  files.py  indicators.py  investigations.py  ips.py  library.py  machineActions.py  machines.py  misc.py  recommendations.py  remediations.py  score.py  securityBaseline.py  software.py  users.py  vulnerabilities.py
src/mde_client/models/: __init__.py  action_payloads.py  enums.py  investigation_models.py
src/mde_client/schemas/: __init__.py  action_availability_status.py  alert.py  asset_baseline_assessment.py  asset_browser_extension.py  asset_certificate_assessment.py  asset_configuration.py  asset_hardware_firmware.py  asset_non_cpe_software.py  asset_software.py  asset_vulnerability.py  auth_params_models.py  auth_scan_history_contract.py  baseline_configuration.py  baseline_exception.py  baseline_profile.py  browser_extension_permission.py  browser_extensions.py  configuration_score.py  data_export_settings.py  delta_asset_vulnerability.py  device_authenticated_scan_agent.py  device_authenticated_scan_definition.py  device_av_info.py  device_group.py  dlp_machine.py  domain.py  export_files_response.py  file.py  firmware.py  in_org_domain_stats.py  in_org_file_stats.py  in_org_ip_stats.py  incident.py  indicator.py  investigation.py  ip.py  library_files.py  list_1_of_import_indicator_result.py  list_1_of_indicator.py  (+14 more)
src/microsoft-mde-client/: pyproject.toml
test/: test_machine_results.py
tests/mde_client/: test_alerts_endpoint.py  test_authenticated_scan_endpoint.py  test_investigation_models.py  test_library_endpoint.py  test_machine_results.py  test_machines_endpoint.py  test_machines_integration.py  test_schema_validator.py  test_via_files.py
tests/mde_client/fixtures/: mde_metadata.xml
